fix alignment for mobile

--- a/style.css
+++ b/style.css
@@ -40,12 +40,14 @@ body,
   background-image: var(--main-gradient);
 }
 .header-title {
+  text-align: center;
   font-size: 30px;
   text-transform: uppercase;
   color: var(--color-white);
 }
 
 .header-subtitle {
+  text-align: center;
   font-size: 20px;
   color: var(--color-white);
   font-weight: 400;
@@ -157,6 +159,13 @@ body,
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+  .container-tweet-content {
+    width: 100%;
+    margin-left: 0px;
+  }
+  .button {
+    width: 100%;
   }
   .container-tweet-title,
   .container-tweet-desc,
